# XposedDexDumpInMemory

./: LOG.md  README.md  ShelledApp.apk  XposedHookCMethod.apk
XposedHookCMethod/: .project  settings.gradle
XposedHookCMethod/app/: build.gradle
XposedHookCMethod/app/src/androidTest/java/cn/yongye/xposedhookcmethod/: ExampleInstrumentedTest.java
XposedHookCMethod/app/src/main/: AndroidManifest.xml
XposedHookCMethod/app/src/main/assets/: xposed_init
XposedHookCMethod/app/src/main/cpp/: CMakeLists.txt  HookerX86.cpp  HookerX86.h  dexdump.cpp  dexdump.h  hooker.cpp  hooker.h
XposedHookCMethod/app/src/main/java/cn/yongye/xposedhookcmethod/: FileUtils.java  MainActivity.java  XposedMain.java
XposedHookCMethod/app/src/main/res/layout/: activity_main.xml
XposedHookCMethod/app/src/main/res/values/: strings.xml
XposedHookCMethod/app/src/test/java/cn/yongye/xposedhookcmethod/: ExampleUnitTest.java
XposedHookCMethod/gradle/wrapper/: gradle-wrapper.properties
